Bug 472108 - Mixed values in the module
Summary: Mixed values in the module
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 474308 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-09 19:45 UTC by Paolo Zamponi
Modified: 2023-09-13 15:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Screenshot (86.17 KB, image/png)
2023-07-09 19:45 UTC, Paolo Zamponi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paolo Zamponi 2023-07-09 19:45:16 UTC
Created attachment 160215 [details]
Screenshot

SUMMARY

STEPS TO REPRODUCE
1. Open Systemsettings
2. Go to Regional Settings -> Region and Languages
3. Look at the module.

OBSERVED RESULT
Mixed values, e.g. "1,000.01" under "Time", or a date under "Currency", and so on. Please, see the attached screenshot.

EXPECTED RESULT
Every values in its right place.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 5.19.0-46-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-07-10 05:25:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3056
Comment 2 Nate Graham 2023-07-11 16:30:50 UTC
Git commit 840e72b3836a2a22c161c46491d2f8d6a451f5c0 by Nate Graham, on behalf of Han Young.
Committed on 11/07/2023 at 16:30.
Pushed by ngraham into branch 'master'.

kcm/region_language: fix enum order
FIXED-IN: 6.0

Reorder enums to fix the bug introduced in
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2946.

M  +1    -1    kcms/region_language/settingtype.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/840e72b3836a2a22c161c46491d2f8d6a451f5c0
Comment 3 Joshua Goins 2023-07-23 19:10:24 UTC
Git commit 74cbbf543298f8f3b516d3e595d7386416a41158 by Joshua Goins, on behalf of Han Young.
Committed on 23/07/2023 at 21:09.
Pushed by redstrate into branch 'Plasma/5.27'.

kcm/region_language: fix enum order
FIXED-IN: 5.27

Reorder enums to fix the bug introduced in
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2946.

(cherry picked from commit 840e72b3836a2a22c161c46491d2f8d6a451f5c0)

M  +1    -1    kcms/region_language/settingtype.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/74cbbf543298f8f3b516d3e595d7386416a41158
Comment 4 Nate Graham 2023-09-13 15:26:37 UTC
*** Bug 474308 has been marked as a duplicate of this bug. ***