kcm/region_language: fix enum order

BUG: 472108
FIXED-IN: 5.27

Reorder enums to fix the bug introduced in
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2946.

(cherry picked from commit 840e72b3836a2a22c161c46491d2f8d6a451f5c0)