kcms/region_language/settingtype.h
@@ -12,6 +12,6 @@
 namespace KCM_RegionAndLang
 {
 Q_NAMESPACE_EXPORT()
-enum SettingType { Lang, Language, Numeric, Time, Currency, Measurement, PaperSize, Address, NameStyle, PhoneNumbers };
+enum SettingType { Lang, Numeric, Time, Currency, Measurement, PaperSize, Address, NameStyle, PhoneNumbers, Language };
 Q_ENUM_NS(SettingType)
 } // namespace KCM_RegionAndLang
